--- a/src/styles/-DepIndex.scss
+++ b/src/styles/-DepIndex.scss
@@ -148,13 +148,26 @@
             &.rowOneColor{
                 .svg-i{
                     background:#d8f0ec;
-                    color:#59cab6;
+                    position: relative;
+                    &:before{
+                        content: '';
+                        display: block;
+                        width: 25px;
+                        height: 20px;
+                        position: absolute;
+                        left: 50%;
+                        margin-left: -12px;
+                        top: 50%;
+                        margin-top: -10px;
+                        background: url(../assets/data_green.png) center center no-repeat;
+                        background-size: 100% auto;
+                    }
                 }
                 p{
                     span{
                         i{
                             background:#59cab6;
-                            box-shadow:0px 4px 13px rgba(89,202,182,0.57);
+                            box-shadow:0px 4px 13px rgba(89, 202, 182, 0.57);
                         }
                     }
                 }
@@ -164,13 +177,26 @@
                 padding-bottom: 0;
                 .svg-i{
                     background:#fff2d2;
-                    color:#f7c572;
+                    position: relative;
+                    &:before{
+                        content: '';
+                        display: block;
+                        width: 25px;
+                        height: 20px;
+                        position: absolute;
+                        left: 50%;
+                        margin-left: -12px;
+                        top: 50%;
+                        margin-top: -10px;
+                        background: url(../assets/data_yellow.png) center center no-repeat;
+                        background-size: 100% auto;
+                    }
                 }
                 p{
                     span{
                         i{
-                            background:#f7c572;
-                            box-shadow:0px 4px 13px rgba(237,206,129,0.57);
+                            background:#fbb643;
+                            box-shadow: 0px 4px 13px rgba(237, 206, 129, 0.71);
                         }
                     }
                 }
@@ -203,10 +229,9 @@
             p{
                 color: #666666;
                 font-size: 14px;
-                line-height: 25px;
+                line-height: 30px;
                 span{
                     font-size: 24px;
-                    line-height: 25px;
                     margin-left: 18px;
                 }
             }
@@ -219,6 +244,8 @@
             padding-bottom: 36px;
             p span{
                 color: #feb946;
+                display: inline-block;
+                vertical-align: top;
             }
         } 
         .countDay{
@@ -226,6 +253,8 @@
             padding-bottom: 20px;
             p span{
                 color: #f16565;
+                display: inline-block;
+                vertical-align: top;
             }
         }
     }
@@ -318,6 +347,7 @@
                     }
                     .progressLine{
                         background-color: #81a7f1;
+                        z-index: 3;
                         i{
                             position: absolute;
                             left: 100%;
@@ -327,6 +357,7 @@
                             line-height: 18px;
                             color: #555;
                             font-style: normal;
+                            z-index: 33;
                         }
                     }
                     .standardLine{
@@ -446,7 +477,7 @@
 }
 
 .rowDayCount{
-    margin-top: 2px;
+    border-top: 1px solid #eaeaea;
     background-color: #fff;
     padding: 20px 30px 26px 30px;
     .rowTitle{
@@ -558,7 +589,7 @@
 }
 
 .rowDayFinish{
-    margin-top: 6px;
+    border-top: 1px solid #eaeaea;
     background-color: #fff;
     padding: 20px 30px 40px 30px;
     .rowTitle{
@@ -634,8 +665,8 @@
             color: #666666;
           }
           .depRes{
-            padding-top: 24px;
-            padding-bottom: 24px;
+            padding-top: 20px;
+            padding-bottom: 20px;
             .resnum{
               color: #000000;
               font-size: 16px;
@@ -682,7 +713,7 @@
 }
 
 .rowMonthDeal{
-    margin-top: 6px;
+    border-top: 1px solid #eaeaea;
     background-color: #fff;
     padding: 20px 30px 40px 30px;
     .rowTitle{
@@ -733,16 +764,16 @@
               line-height: 44px;
           }
           .fItem+.fItem{
-            border-left: 1px solid #e5ecf2;
+            border-left: 1px solid #f1f5f8;
           }
           .cItem{
               width: 20%;
               float: left;
-              padding-top: 25px;
-              padding-bottom: 18px;
+              padding-top: 18px;
+              padding-bottom: 14px;
           }
           .cItem+.cItem{
-              border-left: 1px solid #e5ecf2;
+              border-left: 1px solid #f1f5f8;
               span{
                 color: #2f9e32;
                 font-size: 16px;
@@ -773,7 +804,7 @@
           }
         }
         li+li{
-          border-top: 1px solid #e5ecf2;
+          border-top: 1px solid #f0f4f7;
         }
       }
 }
@@ -966,36 +997,28 @@
                     width: 60px;
                     height: 60px;
                     position: relative;
-                    .allCircle{
-                        position: absolute;
-                        left: 0;
-                        top: 0;
-                        width: 100%;
-                        height: 100%;
-                        border-radius: 50%;
-                        border: 5px solid #f3f8ff;
-                    }
-                    
                     .passCircle{
                         position: absolute;
-                        left: 0;
-                        top: 0;
-                        width: 100%;
-                        height: 100%;
+                        left: -2px;
+                        top: -2px;
+                        right: -2px;
+                        bottom: -2px;
+                        width: 64px;
+                        height: 64px;
                         .left{
                             position: absolute;
                             left: 0;
                             top: 0;
-                            width: 30px;
-                            height: 60px;
+                            width: 32px;
+                            height: 64px;
                             overflow: hidden;
                             .line{
                                 position: absolute;
                                 left: 0;
                                 top: 0;
-                                width: 60px;
-                                height: 60px;
-                                border: 5px solid transparent;
+                                width: 64px;
+                                height: 64px;
+                                border: 9px solid transparent;
                                 border-top-color: #d4f5ca;
                                 border-left-color: #d4f5ca;
                                 border-radius: 50%;
@@ -1006,16 +1029,16 @@
                             position: absolute;
                             top: 0;
                             right: 0;
-                            width: 30px;
-                            height: 60px;
+                            width: 32px;
+                            height: 64px;
                             overflow: hidden;
                             .line{  
                                 position: absolute;
                                 top: 0;
                                 right: 0;
-                                width: 60px;
-                                height: 60px;
-                                border: 5px solid transparent;
+                                width: 64px;
+                                height: 64px;
+                                border: 9px solid transparent;
                                 border-bottom-color: #d4f5ca;
                                 border-right-color: #d4f5ca;
                                 border-radius: 50%;
