--- a/src/styles/-DepIndex.scss
+++ b/src/styles/-DepIndex.scss
@@ -1,6 +1,6 @@
 .rowDayScore{
     background-color: #fff;
-    padding: 20px 30px 40px 30px;
+    padding: 20px 30px 30px 30px;
     .rowTitle{
         &:after{
             content: '';
@@ -96,29 +96,29 @@
         }
     }
     .rowLineItem{
-        padding-top: 16px;
+        padding-top: 10px;
         clear:both;
         display:block;
         width: 55%;
         float: left;
         li{
             clear:both;
-            padding-top:25px;
-            padding-bottom:25px;
+            padding-top:20px;
+            padding-bottom:20px;
             .svg-i{
-                width:50px;
-                height:50px;
+                width:42px;
+                height:42px;
                 background:#f7e1e1;
                 display:block;
                 text-align:center;
-                line-height:50px;
-                font-size:34px;
+                line-height:42px;
+                font-size:28px;
                 color:#f38080;
                 margin-right:20px;
             }
             p{
-                font-size:15px;
-                color:#999999;
+                font-size:14px;
+                color:#333;
                 line-height:26px;
                 strong{
                     float:right;
@@ -129,7 +129,7 @@
                 span{
                     clear:both;
                     display:block;
-                    margin-top:10px;
+                    margin-top:8px;
                     height:8px;
                     border-radius:4px;
                     background:#f0f1f2;
@@ -167,7 +167,7 @@
                     span{
                         i{
                             background:#59cab6;
-                            box-shadow:0px 4px 13px rgba(89, 202, 182, 0.57);
+                            box-shadow:0px 4px 13px rgba(89, 202, 182, 0.25);
                         }
                     }
                 }
@@ -176,7 +176,7 @@
                 padding-top:24px;
                 padding-bottom: 0;
                 .svg-i{
-                    background:#fff2d2;
+                    background:#f4f7fd;
                     position: relative;
                     &:before{
                         content: '';
@@ -195,8 +195,8 @@
                 p{
                     span{
                         i{
-                            background:#fbb643;
-                            box-shadow: 0px 4px 13px rgba(237, 206, 129, 0.71);
+                            background:#2259e5;
+                            box-shadow: 0px 4px 13px rgba(34, 89, 229, 0.25);
                         }
                     }
                 }
@@ -206,7 +206,7 @@
     .rowCountItem{
         width: 34%;
         float: right;
-        padding-top: 32px;
+        padding-top: 26px;
         position: relative;
         &:after{
             content: '';
@@ -250,7 +250,7 @@
         } 
         .countDay{
             padding-top: 30px;
-            padding-bottom: 20px;
+            padding-bottom: 10px;
             p span{
                 color: #f16565;
                 display: inline-block;
@@ -318,7 +318,7 @@
         }
     }
     .rowMain{
-        margin-top: 16px;
+        margin-top: 20px;
         .maintit{
             text-align: right;
             padding-right: 12px;
@@ -326,18 +326,18 @@
             color: #faa642;
         }
         .departLineBox{
-            margin-top: 15px;
+            margin-top: 20px;
             li{
                 .departName{
                     font-size:12px;
-                    color:#999999;
+                    color:#111;
                     line-height:26px;
                     width:65px;
                     text-align:left;
                 }
                 .departLine{
                     height:26px;
-                    background:#f3f8ff;
+                    background:#f4f7fd;
                     position:relative;
                     span{
                         position: absolute;
@@ -346,7 +346,7 @@
                         height: 18px;
                     }
                     .progressLine{
-                        background-color: #81a7f1;
+                        background-color: #2259e5;
                         z-index: 3;
                         i{
                             position: absolute;
@@ -400,13 +400,19 @@
                     width:80px;
                     text-align:center;
                     color: #cccccc;
+                    span{
+                        display: inline-block;
+                        height: 26px;
+                        line-height: 26px;
+                        font-size: 12px;
+                    }
                     span:before{
                         content: '';
                         display: inline-block;
-                        vertical-align: middle;
-                        width: 22px;
+                        vertical-align: top;
+                        width: 20px;
                         height: 26px;
-                        background-image: url(../assets/departIcon01.png);
+                        background-image: none;
                         background-size: 100% auto;
                         background-repeat: no-repeat;
                         background-position: center center;
@@ -416,7 +422,7 @@
                 .goodScore{
                     color: #fbac4a;
                     span:before{
-                        background-image: url(../assets/departIcon02.png);
+                        background-image: url(../assets/no_icon.png);
                     }
                 }
             }
@@ -429,7 +435,7 @@
         }
         .departMean{
             font-size:12px;
-            color:#999999;
+            color:#111;
             text-align:center;
             line-height:12px;
             margin-top: 28px;
@@ -446,7 +452,7 @@
                     &:before{
                         width:10px;
                         height:10px;
-                        background:#669aff;
+                        background:#2259e5;
                         display:inline-block;
                     }
                 }
@@ -481,7 +487,7 @@
     background-color: #fff;
     padding: 20px 30px 26px 30px;
     .rowTitle{
-        margin-bottom: 20px;
+        margin-bottom: 30px;
         &:after{
             content: '';
             display: block;
@@ -508,13 +514,13 @@
 
     .legendFly{
         text-align: center;
-        margin-top: 25px;
+        margin-top: 15px;
         span{
             padding-left: 27px;
             display: inline-block;
             font-size: 12px;
             line-height: 14px;
-            color: #9e9e9e;
+            color: #111;
             position: relative;
             margin: 0px 15px;
             &.legendItem1{
@@ -538,7 +544,7 @@
                     display: block;
                     width: 10px;
                     height: 10px;
-                    background: #89b2ff;
+                    background: #3ebea7;
                     position: absolute;
                     left:0px;
                     top: 3px;
@@ -551,7 +557,7 @@
                     display: block;
                     width: 10px;
                     height: 10px;
-                    background: #fbd6cf;
+                    background: #f47070;
                     box-sizing: border-box;
                     position: absolute;
                     left:0px;
@@ -565,7 +571,7 @@
                     display: block;
                     width: 10px;
                     height: 10px;
-                    background: #cde1ff;
+                    background: #225ae5;
                     position: absolute;
                     left:0px;
                     top: 3px;
@@ -578,7 +584,7 @@
                     display: block;
                     width: 10px;
                     height: 10px;
-                    background: #fac554;
+                    background: #ebaa46;
                     position: absolute;
                     left:0px;
                     top: 3px;
@@ -591,7 +597,7 @@
 .rowDayFinish{
     border-top: 1px solid #eaeaea;
     background-color: #fff;
-    padding: 20px 30px 40px 30px;
+    padding: 20px 30px 30px 30px;
     .rowTitle{
         &:after{
             content: '';
@@ -648,7 +654,7 @@
     }
     .depDayCont{
         border: solid 1px #e5ecf2;
-        margin-top: 28px;
+        margin-top: 16px;
         &:after{
           content: '';
           display: block;
@@ -662,7 +668,7 @@
             background-color: #f4f6f9;
             line-height: 45px;
             font-size: 14px;
-            color: #666666;
+            color: #111;
           }
           .depRes{
             padding-top: 20px;
@@ -715,7 +721,7 @@
 .rowMonthDeal{
     border-top: 1px solid #eaeaea;
     background-color: #fff;
-    padding: 20px 30px 40px 30px;
+    padding: 20px 30px 30px 30px;
     .rowTitle{
         &:after{
             content: '';
@@ -750,7 +756,7 @@
         }
         li{
           text-align: center;
-          color: #999999;
+          color: #111;
           font-size: 14px;
           &:after{
               content: "";
@@ -828,7 +834,7 @@
 
 .rowDealCount{
     background-color: #fff;
-    padding: 20px 30px 40px 30px;
+    padding: 20px 30px 30px 30px;
     .rowTitle{
         &:after{
             content: '';
@@ -884,7 +890,7 @@
         }
     }
     .enrowMain{
-        margin-top: 22px;
+        margin-top: 20px;
         .enTitle{
             .leftTitle{
                 float: left;
@@ -940,7 +946,7 @@
             .departMean{
                 float: right;
                 font-size:12px;
-                color:#999999;
+                color:#111;
                 line-height:12px;
                 span{
                     padding-left:30px;
@@ -954,7 +960,7 @@
                         &:before{
                             width:10px;
                             height:10px;
-                            background:#669aff;
+                            background:#2259e5;
                             display:inline-block;
                         }
                     }
@@ -983,12 +989,12 @@
             }
         }
         .departLineBox{
-            margin-top: 25px;
+            margin-top: 20px;
             li{
                 align-items: center;
                 .departName{
                     font-size:12px;
-                    color:#999999;
+                    color:#111;
                     line-height:26px;
                     width:95px;
                     text-align:left;
@@ -1064,8 +1070,8 @@
                                 width: 60px;
                                 height: 60px;
                                 border: 5px solid transparent;
-                                border-top-color: #81a7f1;
-                                border-left-color: #81a7f1;
+                                border-top-color: #2259e5;
+                                border-left-color: #2259e5;
                                 border-radius: 50%;
                             }
                             
@@ -1084,8 +1090,8 @@
                                 width: 60px;
                                 height: 60px;
                                 border: 5px solid transparent;
-                                border-bottom-color: #81a7f1;
-                                border-right-color: #81a7f1;
+                                border-bottom-color: #2259e5;
+                                border-right-color: #2259e5;
                                 border-radius: 50%;
                             }
                         }
@@ -1095,7 +1101,7 @@
                         padding-top: 14px;
                         .nowNum{
                             display: block;
-                            color: #81a7f1;
+                            color: #2259e5;
                             font-size: 12px;
                             padding-bottom: 4px;
                             position: relative;
@@ -1127,7 +1133,7 @@
                 }
                 .departLine{
                     height:26px;
-                    background:#f3f8ff;
+                    background:#f4f7fd;
                     position:relative;
                     z-index: 1;
                     span{
@@ -1137,7 +1143,7 @@
                         height: 18px;
                     }
                     .progressLine{
-                        background-color: #81a7f1;
+                        background-color: #2259e5;
                         i{
                             position: absolute;
                             left: 100%;
@@ -1215,7 +1221,7 @@
 
             }
             li+li{
-                margin-top: 22px;
+                margin-top: 18px;
             }
             li+.last_li{
                 margin-top: -12px;
